# json-api-benchmark

./: README.md  docker-compose.yml  init.sql
go/: README.md  application.go  go.mod  go.sum  main.go  species.go
nodejs/: .eslintrc  .gitignore  README.md  index.js  knex.js  knexfile.js  package.json  prettier.config.js  species.js
rust/: Cargo.toml  README.md
rust/src/: db.rs  error.rs  main.rs
rust/src/characters/: handlers.rs  model.rs
rust/src/species/: handlers.rs  mod.rs  model.rs
