[package]
name = "json-api-benchmark"
authors = ["Matthias Eder <nodeful@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
anyhow = "1.0.56"
chrono = "0.4"
dotenv = "0.15"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono" ] }
thiserror = "1"
